--- a/Konspector/Konspector.csproj
+++ b/Konspector/Konspector.csproj
@@ -59,6 +59,7 @@
 
     <ItemGroup>
         <PackageReference Include="Google.Apis.Drive.v3" Version="1.66.0.3309" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="8.0.0" />
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
         <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="$(MauiVersion)" />
