--- a/Konspector/Platforms/MacCatalyst/Entitlements.plist
+++ b/Konspector/Platforms/MacCatalyst/Entitlements.plist
@@ -9,6 +9,18 @@
         <!-- When App Sandbox is enabled, this value is required to open outgoing network connections. -->
         <key>com.apple.security.network.client</key>
         <true/>
+        <key>com.apple.security.assets.movies.read-write</key>
+        <true/>
+        <key>com.apple.security.assets.music.read-write</key>
+        <true/>
+        <key>com.apple.security.assets.pictures.read-write</key>
+        <true/>
+        <key>com.apple.security.files.downloads.read-write</key>
+        <true/>
+        <key>com.apple.security.files.user-selected.read-write</key>
+        <true/>
+        <key>com.apple.security.personal-information.photos-library</key>
+        <true/>
     </dict>
 </plist>
 
