--- a/Konspector/Konspector.csproj
+++ b/Konspector/Konspector.csproj
@@ -20,6 +20,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <EnableDefaultCssItems>false</EnableDefaultCssItems>
         <Nullable>enable</Nullable>
+       <WindowsPackageType>None</WindowsPackageType>
 
         <!-- Display name -->
         <ApplicationTitle>Konspector</ApplicationTitle>
